Bug 1437941: Don't ignore mousemove after fullscreen transition r=handyman

MozReview-Commit-ID: Hr9dcKVeYEC

--HG--
extra : rebase_source : fe9d1f3526704dd5c37bcbeb7c6a62de368be12c